<resources>
    <string name="app_name">Drone reporter</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="missing_picture">Missing Picture</string>
    <string name="photo_upload_failed">Photo upload failed</string>
    <string name="title_activity_main">Drone Reporter</string>
    <string name="presenter_mode">Engage Presenter Mode</string>
    <string name="documenter_mode">Engage Drone</string>
    <string name="move">Move To</string>
    <string name="manual">Manual Control</string>
    <string name="distance">Distance: </string>
    <string name="angle">Angle: </string>
    <string name="altitude">Altitude: </string>
    <string name="pic">Take Picture</string>
    <string name="vid">Record Video</string>
    <string name="stopVid">Stop Recording</string>


    <string name="disconnect">Disconnect Drone</string>
    <string name="select_drone">Connect to Drone</string>
    <string name="review_footage">Review Footage</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
</resources>